# ml_visual

./: Cargo.toml  README.md  decompile.nu  index.html  serve.nu
assets/: index.html  index.js  lib.wasm
assets/wasm/: ml_visual.js  ml_visual_bg.wasm
js/: main.js
pages/decision_tree/: index.html  main.js
pages/knn/: index.html  main.js
pages/linear/: binary_class.js  index.html  main.js  three_classes.js
pages/perceptron/: index.html  main.js
src/: canvas.rs  example.rs  lib.rs  math.rs  perceptron.rs  pixel.rs
src/decision_tree/: draw.rs  tree.rs
src/knn/: draw.rs  mod.rs
src/linear/: adaline.rs  binary_class.rs  logistic_regression.rs  mod.rs  perceptron.rs  three_classes.rs
src/linear/draw/: binary_class.rs  mod.rs  three_classes.rs
src/perceptron/: mod.rs  three_classes.rs  two_classes.rs
xtask/: Cargo.toml
xtask/src/: build.rs  decompile.rs  lib.rs  main.rs
