[package]
name = "ml_visual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# <https://stackoverflow.com/a/74006513/9920172>
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.65"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
olive-rs = { git = "https://github.com/banyc/olive-rs.git", rev = "0fbb30fed48eff9d6e450a3bb3300123bdf67d74" }
serde_json = "1.0.108"
wasm-bindgen = "0.2.88"

[workspace]
members = ["xtask"]
