[package]
name = "ml_visual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# <https://stackoverflow.com/a/74006513/9920172>
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.11", features = ["js"] }
getset = "0.1.2"
js-sys = "0.3.65"
jsonc-parser = { version = "0.23.0", features = ["serde"] }
math = { git = "https://github.com/banyc/math.git", rev = "f55cc9e6dc8c991a26a4c9f882bd9487a3b2a1d5" }
olive-rs = { git = "https://github.com/banyc/olive-rs.git", rev = "0fbb30fed48eff9d6e450a3bb3300123bdf67d74" }
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wasm-bindgen = "0.2.88"

[workspace]
members = ["xtask"]
