[package]
name = "ml_visual"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# <https://stackoverflow.com/a/74006513/9920172>
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1"
js-sys = "0.3"
jsonc-parser = { version = "0.23", features = ["serde"] }
math = { git = "https://github.com/banyc/math.git", tag = "v0.0.3" }
olive-rs = { git = "https://github.com/banyc/olive-rs.git", rev = "0fbb30fed48eff9d6e450a3bb3300123bdf67d74" }
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strict-num = "0.2"
wasm-bindgen = "0.2"

[workspace]
members = ["xtask"]
